Some CI issues.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -248,8 +248,10 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
       target_link_libraries(${name} -Wl,--as-needed)
       # Remove all the duplicate new/malloc and free/delete definitions
       if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-        check_cxx_compiler_flag(-fuse-ld=lld LLD_WORKS)
+        set(CMAKE_REQUIRED_LINK_OPTIONS -Wl,--icf=all -fuse-ld=lld)
+        check_cxx_source_compiles("int main() { return 0; }" LLD_WORKS)
         if (LLD_WORKS)
+          message("Using LLD.")
           target_link_libraries(${name} -Wl,--icf=all -fuse-ld=lld)
         endif()
       endif()
