refact(cmake): change mcx16 detection to facilitate cross compiling
Signed-off-by: SchrodingerZhu <i@zhuyi.fan>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,16 +116,6 @@ if(NOT MSVC)
   if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     target_link_libraries(snmalloc_lib INTERFACE atomic)
   endif()
-  if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
-   target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
-  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "amd64")
-   target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
-  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
-   target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
-  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86")
-   target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
-  # XXX elseif ARM?
-  endif()
 endif()
 
 if (WIN32)
@@ -141,17 +131,10 @@ if (WIN32)
   endif()
 endif()
 
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-  if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86_64")
-    target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
-  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "amd64")
-   target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
-  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
-   target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
-  elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "x86")
-   target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
-  endif()
-endif ()
+check_cxx_compiler_flag(-mcx16 SNMALLOC_COMPILER_SUPPORT_MCX16)
+if(SNMALLOC_COMPILER_SUPPORT_MCX16)
+  target_compile_options(snmalloc_lib INTERFACE $<$<COMPILE_LANGUAGE:CXX>:-mcx16>)
+endif()
 
 # Have to set this globally, as can't be set on an interface target.
 if(SNMALLOC_USE_CXX20)
